--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
       body,
       html {
         padding: 0;
@@ -23,6 +27,17 @@
         padding-right: 10px;
         padding-left: 10px;
       }
+      #mapInfo {
+        color: white;
+        padding-top: 28px;
+        display: none;
+        flex-direction: column;
+        font-size: 23px;
+      }
+      #mapInfo > * {
+        padding-top: 10px;
+        padding-bottom: 10px;
+      }
       #main {
         display: flex;
         justify-content: center;
@@ -39,8 +54,53 @@
         font-size: 21.5px;
         color: rgba(239, 230, 235, 0.578);
       }
-      .projects {
-        display: inline;
+      #center {
+        height: 2000px;
+        width: 70vw;
+        color: rgb(238, 235, 230);
+        background-color: rgb(20, 58, 62);
+        line-height: 1;
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-top: 20px;
+      }
+      #logo {
+        text-align: center;
+        position: relative;
+        font-size: 40px;
+      }
+      #logo:hover {
+        color: rgb(223, 222, 164);
+      }
+      #page {
+        font-size: 24px;
+      }
+      .project {
+        list-style: none;
+        width: 100%;
+        height: 100%;
+        font-size: 33px;
+        font-family: "Lobster";
+        justify-content: center;
+        align-items: center;
+      }
+      .project a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        padding-top: 36px;
+        padding-bottom: 36px;
+        text-align: center;
+      }
+      #projects {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        font-family: monospace;
+        font-size: 30px;
+        font-weight: 100;
       }
       @media (width <= 768px) {
         .mantras {
@@ -65,31 +125,10 @@
           position: relative;
         }
       }
-      #center {
-        height: 2000px;
-        width: 70vw;
-        color: rgb(238, 235, 230);
-        background-color: rgb(20, 58, 62);
-        line-height: 1;
-        padding-left: 24px;
-        padding-right: 24px;
-      }
-      #logo {
-        text-align: center;
-        position: relative;
-      }
-      #logo:hover {
-        color: rgb(223, 222, 164);
-      }
       #secret-button:hover {
         cursor: move;
       }
-      #mapInfo {
-        color: white;
-        padding-top: 28px;
-        display: none;
-        flex-direction: column;
-      }
+
       @keyframes flash {
         50% {
           opacity: 0;
@@ -104,9 +143,9 @@
   </head>
   <body>
     <header id="nav">
-      <a id="math" href="/public/math" style="justify-content: center; align-items: center; width: 300px; height: 40px"> Math </a>
+      <a id="math" href="/math" style="justify-content: center; align-items: center; width: 300px; height: 40px"> Math </a>
       <a id="randomOsuMap">Random Osu! Map </a>
-      <input style="width: 30px; padding: 0px" type="number" id="mapQuantity" min="1" max="5" value="1" />
+      <input style="width: 30px; padding: 0px" type="number" id="mapQuantity" min="1" max="15" value="1" />
     </header>
     <div id="mapInfo"></div>
     <div id="main">
@@ -119,10 +158,12 @@
       <div id="center">
         <h3 id="logo">dencoded.live</h3>
         <div id="page">
-          <div style="font-family: monospace; font-size: 20px; font-weight: 100">Projects:</div>
-          <ul>
-            <li class="project"><a href="/public/connect4/">Connect 4</a></li>
-          </ul>
+          <div id="projects">
+            Projects:
+            <li class="project"><a href="/connect4/">Connect 4 (Unfinished)</a></li>
+            <li class="project"><a href="/chess/">Chess (Unfinished)</a></li>
+            <li class="project"><a href="/idk/">idk</a></li>
+          </div>
         </div>
       </div>
       <h1 class="mantras" id="mantras2">
