--- a/public/aboutme/index.html
+++ b/public/aboutme/index.html
@@ -5,85 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
 </html>
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <style>
-      * {
-        margin: 0;
-        padding: 0;
+      #aboutme {
+        font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+        font-size: 24px;
+        padding-left: 20px;
+        line-height: 2;
       }
-      body,
-      html {
-        padding: 0;
-        margin: 0;
-        background-color: rgb(18, 20, 23);
-      }
-      a {
-        color: white;
-        text-decoration: none;
-        cursor: pointer;
-      }
-      #nav {
-        padding: 5px;
-        position: fixed;
-        background-color: rgba(159, 190, 186, 0.616);
-        width: 100vw;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-      }
-      #nav > * {
-        padding-right: 15px;
-        padding-left: 15px;
-        font-family: monospace;
-        font-size: 16px;
-      }
-      #nav a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 40px;
-      }
-      #main {
-        display: flex;
-        justify-content: center;
-        margin: 0;
-        padding-top: 60px;
-        font-family: "Lobster", cursive;
-      }
-      #center {
-        min-height: 500px;
-        width: 70vw;
-        color: rgb(238, 235, 230);
-        background-color: rgb(20, 58, 62);
-        line-height: 1.6;
-        padding: 24px;
-      }
-      #logo {
-        text-align: center;
-        position: relative;
-        font-size: 40px;
-      }
-      #logo:hover {
-        color: rgb(223, 222, 164);
-      }
-      .content {
-        font-family: monospace;
-        font-size: 18px;
-        margin-top: 20px;
-      }
-      @media (width <= 768px) {
-        #logo {
-          max-width: 80vw;
-        }
-        #center {
-          background-color: rgba(20, 58, 62, 80);
-        }
+      #resume {
+        text-decoration: underline;
       }
     </style>
+    <link rel="stylesheet" href="../main.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -92,19 +29,28 @@
   </head>
   <body>
     <header id="nav">
-      <a href="/aboutme">About Me</a>
-      <a id="math" href="/math">Math</a>
-      <a id="randomOsuMap">Random Osu! Map </a>
-      <input style="width: 30px; padding: 0px" type="number" id="mapQuantity" min="1" max="15" value="1" />
+      <h3 id="logo">dencoded.live</h3>
+      <a class="active" href="/aboutme">About Me</a>
+      <a href="/contact">Contact</a>
     </header>
     <div id="main">
       <div id="center">
-        <h3 id="logo">About Me</h3>
-        <div class="content">
-          <iframe src="/aboutme/Resume.pdf" width="100%" height="800px" style="border: none;"></iframe>
+        <div id="content">
+          <h3>About Me:</h3>
+          <div id="aboutme">
+            <p>
+              &nbsp;&nbsp; Hi! I'm Jade, a self taught developer with a focus in web development. I did most of my studying through courses on Udemy, of which I
+              have completed four. I moved to Utah just a few months ago and I'm currently looking for work. I'm proficient in front-end and back-end web
+              development, but primarily back-end. I am very passionate about programming, I'm especially interested in doing more game development, or anything
+              that involves problem solving or use of algorithms. I still have much to learn, but I think my passion for learning is my best quality, and I'm
+              especially passionate about learning to be an excellent programmer. I intend on doing my best to build my portfolio and network within the tech
+              industry in Utah, with intent to get admitted into Harbour.Space University in Barcelona soon in order to hone my skills.
+            </p>
+            <p style="font-weight: bold">You can check out my resume <a id="resume" href="/aboutme/Resume.pdf">here!</a></p>
+          </div>
         </div>
       </div>
     </div>
-    <script type="module" src="/index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
