fixed dropdown and other small issues

--- a/public/aboutme/index.html
+++ b/public/aboutme/index.html
@@ -33,6 +33,7 @@
       <a class="active" href="/aboutme">About Me</a>
       <a href="/contact">Contact</a>
     </header>
+    <div id="dropdown"></div>
     <div id="main">
       <div id="center">
         <div id="content">
