--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
         overflow: visible;
       }
       .frame {
-        width: 300px;
-        height: 300px;
-        border: 1px solid #444;
+        width: 607px;
+        height: 342px;
+        border: 5px solid #444;
         border-radius: 4px;
         overflow: hidden;
         transform: scale(0.8);
@@ -32,11 +32,12 @@
         display: flex;
         align-items: center;
         margin: 20px 0;
+        justify-content: center;
       }
       .project-container a {
         margin-right: 20px;
         font-size: 24px;
-        min-width: 120px;
+        font-family: monospace;
       }
     </style>
     <link rel="stylesheet" href="main.css" />
@@ -59,10 +60,10 @@
     <div id="main">
       <div id="center">
         <div id="content">
-          Projects:<br />
+          <h2>Projects</h2>
+          <br />
           <div class="project-container">
             <a href="/projects/connect4">Connect 4</a>
-            <iframe class="frame" src="/projects/connect4" frameborder="1"></iframe>
           </div>
         </div>
       </div>
